force-app/main/default/objects/User/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>