force-app/main/default/objects/User/fields/Referral_Template__c.field-meta.xml
<CustomField>
    <fullName>Referral_Template__c</fullName>
    <defaultValue>&apos;Hello, &lt;br&gt;&lt;br&gt;Here is the contact information for the clinicians we discussed: &lt;br&gt;&lt;br&gt; &lt;Doctor Referral Info Here&gt; &lt;br&gt;&lt;br&gt; All best wishes, &lt;br&gt;&lt;br&gt;&lt;user information&gt;&apos;</defaultValue>
    <description>Email template for referral&apos;s on the Rsp but not on the HLC</description>
    <label>Referral Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>