force-app/main/default/objects/User/fields/RID__c.field-meta.xml
<CustomField>
    <fullName>RID__c</fullName>
    <externalId>true</externalId>
    <label>RID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>