force-app/main/default/objects/User/fields/Rsp_Default_Filters__c.field-meta.xml
<CustomField>
    <fullName>Rsp_Default_Filters__c</fullName>
    <label>Rsp Default Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>